--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12"
   },
   "files": [
     "dist",
