--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "files": ["src/index.ts"],
   "compilerOptions": {
     "target": "es2018",
-    "module": "commonjs",
+    "module": "Node16",
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
